converted phone-detail ctrl->component, phone-list ctrl->component and checkmark filter->pipe

--- a/TestAngular2/app/phone-list/phone-list.template.html
+++ b/TestAngular2/app/phone-list/phone-list.template.html
@@ -5,12 +5,14 @@
 
       <p>
         Search:
-        <input ng-model="$ctrl.query" />
+        <input [(ngModel)]="query" />
+        <!--angular 1: <input ng-model="$ctrl.query" />-->
       </p>
 
       <p>
         Sort by:
-        <select ng-model="$ctrl.orderProp">
+        <select [(ngModel)]="orderProp">
+        <!--angular 1: <select ng-model="$ctrl.orderProp">-->
           <option value="name">Alphabetical</option>
           <option value="age">Newest</option>
         </select>
@@ -21,12 +23,14 @@
       <!--Body content-->
 
       <ul class="phones">
-        <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp"
-            class="thumbnail phone-list-item">
+        <li *ngFor="let phone of getPhones()" class="thumbnail phone-list-item">
+        <!--angular 1: <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp" class="thumbnail phone-list-item"> -->
+           <!--angular 1 had filters and orderby. angular 2 has got rid of those completely. You have to do the work in javascript/typescript! -->
           <a href="#!/phones/{{phone.id}}" class="thumb">
-            <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
+            <img [src]="phone.imageUrl" [alt]="phone.name" />
+            <!--<img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />-->
           </a>
-          <a href="#!/phones/{{phone.id}}">{{phone.name}}</a>
+          <a href="#!/phones/{{phone.id}}" class="name">{{phone.name}}</a>
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
