--- a/TestAngular2/app/phone-list/phone-list.template.html
+++ b/TestAngular2/app/phone-list/phone-list.template.html
@@ -26,11 +26,15 @@
         <li *ngFor="let phone of getPhones()" class="thumbnail phone-list-item">
         <!--angular 1: <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp" class="thumbnail phone-list-item"> -->
            <!--angular 1 had filters and orderby. angular 2 has got rid of those completely. You have to do the work in javascript/typescript! -->
-          <a href="#!/phones/{{phone.id}}" class="thumb">
+          <a [routerLink]="['/phones', phone.id]" class="thumb">
+            <!--angular 1: <a href="#!/phones/{{phone.id}}" class="thumb">-->
+
             <img [src]="phone.imageUrl" [alt]="phone.name" />
             <!--<img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />-->
           </a>
-          <a href="#!/phones/{{phone.id}}" class="name">{{phone.name}}</a>
+          <!--<a href="#!/phones/{{phone.id}}" class="name">{{phone.name}}</a>-->
+          <a [routerLink]="['/phones', phone.id]" class="name">{{phone.name}}</a>
+
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
